deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hospital-app-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hospital-app

  template:

    metadata:
      labels:
        app: hospital-app

    spec:

      containers:

      - name: hospital-app-container

        image: mohitdocker241/hospital-app:v2

        ports:
          - containerPort: 5000
