mongo.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
      - name: mongo
        image: mongo:7

        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service

metadata:
  name: mongo

spec:
  selector:
    app: mongo

  ports:
  - port: 27017
    targetPort: 27017

  type: ClusterIP
