service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hospital-app-service

spec:
  selector:
    app: hospital-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30050

  type: NodePort
