ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hospital-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: hospital-app-service

                port:
                  number: 80
